# ginny

./: .gitignore  LICENSE  README.md  __init__.py  implement.py  pyproject.toml  summarize.py
.github/workflows/: ginny-benchmark.yml  python-tests.yml
goal-node/: config.py  goal_spotter.py  main.py  pdf_to_json.py  summary.txt
implementation-node/: implementer.py  main.py
neurosym-tools-for-llms/: blocks.py
project/: __init__.py  blocks.py
project/tools/: bashtool.py  customreadtool.py  gcctool.py
src/cli/: __main__.py  goal_node.py  implement.py  solve.py  spot_goal.py  summarize.py  validate.py
src/core/goal_node/: goal_spotter.py
src/core/implement/: implementer.py
src/core/implementation_node/: implementer.py
src/core/solve/: graph.py  node_logic.py  sys_prompts.py  workflow.py
src/core/solve/agent_logic/: generics.py  sys_prompts.py
src/core/solve/agent_logic/custom_types/: ctypes.py
src/core/solve/agent_logic/get_comp/: get_comp.py
src/core/solve/agent_logic/get_tests/: get_tests.py
src/core/solve/agent_logic/implementer/: implementer.py
src/core/solve/auto_logic/: cleanup.py  compilation.py  generics.py  max_retries.py  preprocessing.py  prompt.py  validation.py
src/core/summarize/: summarizer.py
src/core/validation/: advanced_validation.py  validation.py
src/utils/: compile.py  config.py  pdf_to_json.py  pdf_to_str.py  pretty_print.py  state.py  validate.py
tools/: customwritetool.py  gcctool.py  pdfloadertool.py
validation/: validation.py
workflow/: extract_tests.py  graph.py  main.py  read_json.py
(+1 files in other folders)
