[tool.poetry.scripts]
ginny = "src.cli.__main__:main" 

[tool.poetry]
name = "ginny"
version = "0.1.0"
description = ""
authors = ["stavros-mhs <stmi2003@gmail.com>"]
readme = "README.md"

packages = [
  { include = "src" }
]

[tool.poetry.dependencies]
python = ">=3.12, <4.0"
langchain = "0.3.9"
langchain-community = "0.3.9"
langchain-openai = "0.2.11"
langgraph = "0.2.56"
pypdf = "5.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"