[tool.poetry.scripts]
ginny = "src.cli.__main__:main" 

[tool.poetry]
name = "ginny"
version = "0.1.0"
description = ""
authors = ["stavros-mhs <stmi2003@gmail.com>"]
readme = "README.md"

packages = [
  { include = "src" }
]

[tool.poetry.dependencies]
python = ">=3.12, <4.0"
langchain = "^1.0.2"
langchain-community = "^0.4.1"
langchain-openai = "^1.0.1"
langgraph = "^1.0.1"
pypdf = "5.5.0"
langchain-anthropic = "^1.0.1"
langchain-google-genai = "^3.0.0"


[build-system]
requires = ["poetry-core>=1.8.1"]
build-backend = "poetry.core.masonry.api"